# libhelix-sys

./: Cargo.toml  README.md  build.rs
csrc/: helix_shim.c
examples/: decode_buffer.rs  play.rs
libhelix/src/real/: assembly.h
src/: decoder.rs  error.rs  ffi.rs  frame.rs  lib.rs
tests/: decode.rs
